WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304249
REGRESSION (Safari 26.2): Color font affects the color of other DOM elements
https://bugs.webkit.org/show_bug.cgi?id=304249
Summary
REGRESSION (Safari 26.2): Color font affects the color of other DOM elements
Dan
Reported
2025-12-16 06:25:20 PST
In Safari 26.2 macOS, using a specific color font for the page heading affects the rendering of subsequent DOM elements. The effect can be mitigated by using the `isolation: isolate` CSS property on the heading. The issue was not present, as far as I remember, on Safari 26.1.
Attachments
Simplified test case
(806 bytes, text/html)
2025-12-16 06:26 PST
,
Dan
no flags
Details
The color font (Coral Pixels, OFL License)
(615.81 KB, application/octet-stream)
2025-12-16 06:28 PST
,
Dan
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Dan
Comment 1
2025-12-16 06:26:13 PST
Created
attachment 477747
[details]
Simplified test case
Dan
Comment 2
2025-12-16 06:28:05 PST
Created
attachment 477748
[details]
The color font (Coral Pixels, OFL License) The font is a version of Coral Pixels, a font licensed under SIL OFL, available at:
https://github.com/tanukifont/Coral-Pixels
Alexey Proskuryakov
Comment 3
2025-12-16 10:43:54 PST
Thank you for the report! This reproduces with Safari Technology Preview in macOS 26.1, and does not reproduce with built-in Safari. So, rather surprisingly, this is a WebKit regression, not an underlying framework one.
Radar WebKit Bug Importer
Comment 4
2025-12-16 10:44:02 PST
<
rdar://problem/166631312
>
Alexey Proskuryakov
Comment 5
2025-12-17 10:55:02 PST
***
Bug 304334
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6
2026-01-05 15:47:51 PST
Test at
https://codepen.io/Rik/pen/GRVmMRj
Alexey Proskuryakov
Comment 7
2026-01-05 15:56:28 PST
Does this affect any production websites? I assume so, given that this got quickly noticed by multiple people, but a clear confirmation would be helpful.
thomas.guillory
Comment 8
2026-01-06 00:25:54 PST
One example : this affects this chat app, based on Tauri.app which use wkwebview:
https://github.com/tchapgouv/tchap-desktop/issues/145
Dan
Comment 9
2026-01-06 01:48:08 PST
I’ve seen it in the header for
https://livelaugh.blog/
, which now uses `isolation: isolate` to fix the issue.
Nipun Shukla
Comment 10
2026-01-06 13:55:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56156
EWS
Comment 11
2026-01-07 22:17:13 PST
Committed
305254@main
(66bd20a0579a): <
https://commits.webkit.org/305254@main
> Reviewed commits have been landed. Closing PR #56156 and removing active labels.
Alexey Proskuryakov
Comment 12
2026-04-07 12:47:20 PDT
The fix shipped with Safari 26.4.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug