REGRESSION (Safari 26.2): Color font affects the color of other DOM elements https://bugs.webkit.org/show_bug.cgi?id=304249 rdar://166631312

Reviewed by Simon Fraser.

State changes from replayed glyph display lists contaminated the recorder's
lastDrawingState, causing subsequent text to render with incorrect colors.
This is fixed by adding GraphicsContextStateSaver in
TextPainter::paintTextOrEmphasisMarks() around cached glyph display list
replay to isolate state changes.

* LayoutTests/fast/text/glyph-display-lists/colr-glyph-state-leak-expected.html: Added.
* LayoutTests/fast/text/glyph-display-lists/colr-glyph-state-leak.html: Added.
* Source/WebCore/rendering/TextPainter.cpp:
(WebCore::TextPainter::paintTextOrEmphasisMarks):

Canonical link: https://commits.webkit.org/305254@main